--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -8,6 +8,7 @@ window#waybar {
 }
 
 button,
+#taskbar,
 #workspaces {
   transition: background 0.5s ease, color 0.5s ease;
   background: #1e1e2e;
@@ -18,8 +19,9 @@ button,
   border: 3px solid #1e1e2e;
 }
 
+#taskbar button.active,
 #workspaces button.active {
-  box-shadow: inherit;
+  box-shadow: none;
   color: #1e1e2e;
   text-shadow: none;
   background: linear-gradient(
@@ -36,25 +38,7 @@ button,
   border: 3px solid #1e1e2e;
 }
 
-#taskbar button.active {
-  box-shadow: inherit;
-  color: #1e1e2e;
-  text-shadow: none;
-  background: linear-gradient(
-    45deg,
-    #94e2d5,
-    #89dceb,
-    #74c7ec,
-    #89b4fa,
-    #b4befe
-  );
-
-  /* Rounded outer sides */
-  border-radius: 10px;
-  border: 3px solid #1e1e2e;
-}
-
-#button:not(.active):hover {
+button:not(.active):hover {
   box-shadow: none;
   text-shadow: none;
   color: #1e1e2e;
