--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -89,7 +89,7 @@ button,
   padding-bottom: 0px;
   margin: 3px 3px 3px 3px;
   margin-bottom: 0px;
-  border-radius: 1rem;
+  border-radius: 10px;
 }
 
 #pulseaudio {
