--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -98,6 +98,14 @@ button,
 
 #clock {
   color: @yellow;
+  background: @mantle;
+  border-radius: 0px 0px 0px 24px;
+  padding-left: 13px;
+  padding-right: 15px;
+  margin-right: 0px;
+  margin-left: 10px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 #battery {
