feat(waybar): Use lavender instead of red

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -74,7 +74,7 @@ button,
 #mpris {
   background: @surface0;
   padding: 1px 5px 1px 5px;
-  color: @red;
+  color: @lavender;
   border-radius: 10px;
 }
 
